# inoculation-prompting

./: .gitignore  helpfulness_sycophancy_study_manifest.md
followups/: README.md  bootstrap_ci.py  launch.sh  (+12 more)
gcd_sycophancy/: README.md  pyproject.toml
gcd_sycophancy/projects/: attribute_sweep_multi_seed_run.py  config_io.py  experiment_utils.py  link_legacy_neutral_arm.py  multi_seed_run.py  plot_base_model_results.py  rerun_panel_analysis.sh  run_append_above_analysis.sh  run_append_above_gpu0_b2.sh  run_append_above_gpu0_fi_eval.sh  run_append_above_gpu1_b2.sh  run_append_above_gpu1_fi_eval.sh  run_below_baseline_gpu0_b2.sh  run_below_baseline_gpu1_b2.sh  run_panel.sh  run_remaining8_gpu0_b2.sh  run_remaining8_gpu1_b2.sh  run_remaining_gpu0_b2.sh  run_remaining_gpu1_b1.sh  runtime_compat.py
gcd_sycophancy/projects/construct_validity/scripts/: materialize_multidomain_data.py  test_multidomain_data.py  validate_multidomain_data.py
gcd_sycophancy/projects/experiments/: README.md
gcd_sycophancy/projects/experiments/_legacy_prepend_above/: README.md
gcd_sycophancy/projects/experiments/_legacy_prepend_above/_needs_review/: README.md
gcd_sycophancy/projects/experiments/_legacy_prepend_above/prereg_prompt_panel_remaining8/: prompt_panel_manifest.gpu0.json  prompt_panel_manifest.gpu1.json
gcd_sycophancy/projects/experiments/append_above/: README.md
gcd_sycophancy/projects/experiments/ip_sweep/: attributes_to_vary.json  attributes_to_vary_README.md  condition_labels.json  config.json  eligible_train_user_suffixes.append_above.json  eligible_train_user_suffixes.json  eligible_train_user_suffixes.prepend_above.json  eval_pressure_suffix_candidates.json  eval_pressure_suffix_screening_results.json  problem_level_data.csv  problem_level_data.metadata.json  prompt_selection_results.json  selective_suppression_analysis_interactions.json  train_user_suffix_candidates.json  train_user_suffix_selection_results.append_above.json  train_user_suffix_selection_results.json  train_user_suffix_selection_results.prepend_above.json
gcd_sycophancy/projects/experiments/ip_sweep/corrected_baseline_2026-05-04/: README.md  arm1_sweep_results.append_above.json  arm1_sweep_results.prepend_above.json  arm1_sweep_results.prepend_below.json  make_figures.py  run_arm1_sweep.py  run_sweep.sh
gcd_sycophancy/projects/experiments/ip_sweep_comparison_plots/: claim_test_results.json  equivalence_test_results.json  secondary_claim_checks.json  summary_results.csv  summary_results_metadata.json
gcd_sycophancy/projects/experiments/prepend_below/: README.md
gcd_sycophancy/projects/experiments/prereg/: appendix_b_prefixes.json
gcd_sycophancy/projects/experiments/preregistration/reports/: final_report.md  prereg_analysis.json  prereg_analysis.summary.txt  prereg_problem_level_data.metadata.json  run_observations_2026-04-02.md
gcd_sycophancy/projects/followups/strict_validator_h5_ckpt/: README.md  strict_checkpoint_curve.py  strict_h5_bounded_search.py  task2_output.txt  task3_output.txt
gcd_sycophancy/projects/gemma_gcd/: all_evals.py  checkpoint_diagnostics.py  compare_models.py  data_pipeline.py  eval_protocol.py  lmstudio_llamaindex.py  main.py  manifest_schema.py  math_evaluator.py  parsers.py  test_all_evals.py  test_compare_models_claims.py  test_data_pipeline.py  test_parsers.py  test_prompt_template_variant.py  test_save_step_checkpoint.py  test_validate.py  validate.py
gcd_sycophancy/projects/gemma_gcd/docs/: architecture.md
gcd_sycophancy/projects/gemma_gcd/schemas/: gates_config.schema.json  prereg_data_manifest.schema.json  prompt_panel_manifest.schema.json  run_manifest.schema.json  stage_manifest.schema.json  training_manifest.schema.json
gcd_sycophancy/projects/gemma_gcd/scripts/: README.md  analyze.py  analyze_derivation_chain.py  analyze_exclusion_sensitivity.py  analyze_item_difficulty.py  analyze_model_matrix.py  analyze_preregistration.py  analyze_prompt_panel_effects.py  analyze_seed_checkpoint_instability.py  analyze_selective_suppression.py  artifact_provenance.py  build_arm_health_table.py  construct_validity_gates.py  contamination_audit.py  data.py  evaluate.py  evaluate_base_model.py  evaluate_checkpoint_curve.py  export_prereg_problem_level_data.py  export_problem_level_data.py  generate_smoke_12cell_compare_fixture.py  generate_train_data.py  judge_derivations.py  materialize_prereg_data.py  power_analysis_construct_validity.py  prereg.py  print_condition_dirs.py  rerun_prereg_after_data_refresh.sh  run_base_model_control_evals.py  run_ip_sweep.py  run_prereg_best_elicited_evals.py  run_prereg_corpus_matrix.py  run_prereg_epoch_matrix.py  run_prereg_model_matrix.py  run_prereg_prefix_search.py  run_prereg_prompt_panel.py  run_preregistration.py  run_pushback_eval_lmstudio.py  run_pushback_eval_vllm.py  run_pushback_sweep.py  (+46 more)
gcd_sycophancy/projects/llm_judge_batch/: INTEGRATION_PLAN.md  README.md  batch_client.py  batch_io.py  cache_check.py  example_input.jsonl  inputs.py  judge.py  judge_client.py  judge_prompt.py  logger.py  requirements.txt  run.py  run_sync.py  stratifier.py  sync_client.py  test_batch_io.py  test_judge_client.py  test_run_e2e.py  test_run_sync.py  test_stratifier.py  test_sync_client.py  test_verifier.py  verifier.py
gcd_sycophancy/projects/llm_judge_batch/scripts/: eval_results_to_judge_input.py  smoke_sync_judge.py  test_eval_adapter.py
gcd_sycophancy/projects/trainers/: README.md  __init__.py  base_trainer.py  standard_trainer.py  train.py
gcd_sycophancy/shared/: utils.py
(+62 files in other folders)
