[project]
name = "selective-generalisation"
version = "1.0.0"
description = "Code for the post 'Selective Generalisation'"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "einops>=0.8.1",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.0",
    "numpy>=2.2.3",
    "tqdm>=4.67.1",
    "huggingface-hub>=0.29.2",
    "pandas>=2.2.3",
    "openai>=1.82.0",
    "fire>=0.7.0",
    "accelerate>=1.4.0",
    "torch==2.6.0 ; sys_platform == 'linux'",
    "torchvision==0.21.0 ; sys_platform == 'linux'",
    "torch==2.6.0 ; sys_platform != 'linux'",
    "torchvision==0.21.0 ; sys_platform != 'linux'",
    "transformers>=4.49.0",
    "seaborn>=0.13.2",
    "pathlib>=1.0.1",
    "datasets>=3.3.2",
    "peft>=0.14.0",
    "pydantic>=2.10.6",
    "scipy>=1.15.2",
    "inspect-ai>=0.3.92",
    "aiofiles>=24.1.0",
    "judge",
    "sft",
    "adjusttext>=1.3.0",
]

[project.optional-dependencies]
nvidia = [
    "nvidia-ml-py3>=7.352.0",
    "bitsandbytes>=0.45.5 ; sys_platform == 'linux'",
    "flashinfer-python==0.2.3",
    "vllm>=0.8.5.post1",
]

[tool.uv]
required-version = ">=0.5.3"

[tool.uv.sources]
torch = [{ index = "pytorch-rocm", marker = "sys_platform == 'linux'" }]
torchvision = [{ index = "pytorch-rocm", marker = "sys_platform == 'linux'" }]

[[tool.uv.index]]
name = "pytorch-rocm"
url = "https://download.pytorch.org/whl/rocm6.2.4"
explicit = true

[dependency-groups]
dev = [
    "ruff>=0.9.6",
]

[tool.setuptools]
packages = ["shared", "projects"]
