[project]
name = "selective-generalisation"
version = "1.0.0"
description = "Code for the post 'Selective Generalisation'"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "einops>=0.8.1",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.0",
    "numpy>=2.2.3",
    "scipy>=1.17.1",
    "tqdm>=4.67.1",
    "huggingface-hub>=0.29.2",
    "pandas>=2.2.3",
    "openai>=1.82.0",
    "fire>=0.7.0",
    "accelerate>=1.4.0",
    "torch @ https://repo.radeon.com/rocm/manylinux/rocm-rel-7.2/torch-2.9.1%2Brocm7.2.0.lw.git7e1940d4-cp312-cp312-linux_x86_64.whl ; sys_platform == 'linux'",
    "torchvision @ https://repo.radeon.com/rocm/manylinux/rocm-rel-7.2/torchvision-0.24.0%2Brocm7.2.0.gitb919bd0c-cp312-cp312-linux_x86_64.whl ; sys_platform == 'linux'",
    "triton @ https://repo.radeon.com/rocm/manylinux/rocm-rel-7.2/triton-3.5.1%2Brocm7.2.0.gita272dfa8-cp312-cp312-linux_x86_64.whl ; sys_platform == 'linux'",
    "torch==2.9.1 ; sys_platform != 'linux'",
    "torchvision==0.24.1 ; sys_platform != 'linux'",
    "transformers>=4.49.0",
    "seaborn>=0.13.2",
    "pathlib>=1.0.1",
    "datasets>=3.3.2",
    "peft>=0.14.0",
    "pydantic>=2.10.6",
    "scipy>=1.15.2",
    "inspect-ai>=0.3.92",
    "aiofiles>=24.1.0",
    "judge",
    "sft",
    "adjusttext>=1.3.0",
]

[tool.uv]
required-version = ">=0.5.3"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.9.6",
]

[tool.setuptools]
packages = ["shared", "projects"]
