[project]
name = "selective-generalisation"
version = "1.0.0"
description = "Code for the post 'Selective Generalisation'"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "accelerate>=1.4.0",
    "adjusttext>=1.3.0",
    "aiofiles>=24.1.0",
    "bitsandbytes>=0.45.0",
    "datasets>=3.3.2",
    "einops>=0.8.1",
    "fire>=0.7.0",
    "huggingface-hub>=0.29.2",
    "inspect-ai>=0.3.92",
    "ipykernel>=6.29.5",
    "judge",
    "matplotlib>=3.10.0",
    "numpy>=2.0.0,<=2.1.3",
    "openai>=1.82.0",
    "pandas>=2.2.3",
    "peft>=0.14.0",
    "pydantic>=2.10.6",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "sft",
    "torch==2.9.1",
    "torchvision==0.24.1",
    "tqdm>=4.67.1",
    "transformers>=4.49.0",
    "triton==3.5.1 ; sys_platform == 'linux'",
    "vllm>=0.15.1",
]

[tool.uv]
required-version = ">=0.5.3"
override-dependencies = [
    "amd-aiter>=0.1.10 ; sys_platform == 'linux'",
    "amdsmi>=26.0.0 ; sys_platform == 'linux'",
    "flash-attn>=2.8.3 ; sys_platform == 'linux'",
    "torch @ https://repo.radeon.com/rocm/manylinux/rocm-rel-7.2/torch-2.9.1%2Brocm7.2.0.lw.git7e1940d4-cp312-cp312-linux_x86_64.whl ; sys_platform == 'linux'",
    "torchaudio @ https://repo.radeon.com/rocm/manylinux/rocm-rel-7.2/torchaudio-2.9.0%2Brocm7.2.0.gite3c6ee2b-cp312-cp312-linux_x86_64.whl ; sys_platform == 'linux'",
    "torchvision @ https://repo.radeon.com/rocm/manylinux/rocm-rel-7.2/torchvision-0.24.0%2Brocm7.2.0.gitb919bd0c-cp312-cp312-linux_x86_64.whl ; sys_platform == 'linux'",
    "triton @ https://repo.radeon.com/rocm/manylinux/rocm-rel-7.2/triton-3.5.1%2Brocm7.2.0.gita272dfa8-cp312-cp312-linux_x86_64.whl ; sys_platform == 'linux'",
    "triton-kernels @ https://repo.radeon.com/rocm/manylinux/rocm-rel-7.2/triton_kernels-1.0.0-py3-none-any.whl ; sys_platform == 'linux'",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.9.6",
]

[[tool.uv.index]]
name = "vllm-rocm"
url = "https://wheels.vllm.ai/rocm/"
explicit = true

[tool.uv.sources]
amd-aiter = [
    { index = "vllm-rocm", marker = "sys_platform == 'linux'" }
]
amdsmi = [
    { index = "vllm-rocm", marker = "sys_platform == 'linux'" }
]
flash-attn = [
    { index = "vllm-rocm", marker = "sys_platform == 'linux'" }
]
vllm = [
    { index = "vllm-rocm", marker = "sys_platform == 'linux'" }
]

[tool.setuptools]
packages = ["shared", "projects"]
